--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -316,7 +316,7 @@
     <string name="send_as_mms">Convert to MMS</string>
     <string name="send_as_mms_summary">Long messages will be sent as MMS instead of individual SMS</string>
     <string name="signature">Signature</string>
-    <string name="signature_summary">NOTE: sent signatures will NOT be displayed in Pulse's message list. Signatures will only be shown to the receiver of the message.</string>
+    <string name="signature_summary">NOTE: sent signatures will NOT be displayed in Pulse\'s message list. Signatures will only be shown to the receiver of the message.</string>
 
 
     <!-- Theming Options -->
