button to test notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -398,6 +398,7 @@
     <string name="cancel">Cancel</string>
     <string name="hours">Hours</string>
     <string name="minutes">Minutes</string>
+    <string name="test">Test</string>
 
     <!-- Purchase/Subscriptions -->
     <string name="no_subscription_found">No Subscription Found!</string>
